# projeto-ed-final

./: .env.example  .gitignore  404.html  DICTIONARY.md  README.md  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  slides.html
.github/workflows/: deploy-docs.yml
PROJETO/: index.html
adr/ADR-0001/: index.html
adr/ADR-0002/: index.html
adr/ADR-0003/: index.html
adr/ADR-0004/: index.html
arquitetura/: index.html
como-rodar/: index.html
dags/: dag_pipeline_streaming.py
diagrama_modelo_gold/: index.html
dictionary/: index.html
docker/airflow/: Dockerfile
docker/seed/: Dockerfile
docs/: PROJETO.md  arquitetura.md  como-rodar.md  diagrama_modelo_gold.md  index.md  kpis.md  metabase_setup.md  slides.html
docs/adr/: ADR-0001.md  ADR-0002.md  ADR-0003.md  ADR-0004.md
kpis/: index.html
metabase_setup/: index.html
search/: search_index.json
sql/: 00_create_databases.sql  01_ddl.sql
sql/kpis/: 01_kpi_receita_mensal_por_plano.sql  02_kpi_taxa_churn_mensal.sql  03_kpi_usuarios_ativos_mau.sql  04_kpi_top10_artistas.sql  05_metricas_horas_ticket_medio.sql
src/ingestao/: landing_dimensoes.py
src/notebooks/: 01_landing_dimensoes.ipynb  02_landing_fatos.ipynb  03_bronze_fatos.ipynb  04_bronze_dimensoes.ipynb  05_silver_fatos.ipynb  06_silver_dimensoes.ipynb  07_gold_dimensoes.ipynb  08_gold_fatos.ipynb  09_gold_para_postgres.ipynb
src/seed/: config.py  db.py  generators.py  main.py
tests/: test_generators.py  test_gold.py  test_silver.py
