[project]
name = "projeto-final-eng"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.4.1",
    "faker>=40.22.0",
    "ipykernel>=7.3.0",
    "jupyterlab>=4.5.8",
    "minio>=7.2.20",
    "delta-spark>=4.1.0",
    "pandas>=2.2.0",
    "psycopg2-binary>=2.9.12",
    "sqlalchemy>=2.0",
    "pyspark>=4.1.2",
    "python-dotenv>=1.2.2",
]

[project.scripts]
seed = "seed.main:main"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
